<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".Activity.CreatePinActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/text_change_pin"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_enter_pin_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/round_edittext"
        android:hint="@string/text_pin"
        android:padding="10dp" />

    <EditText
        android:id="@+id/edt_confirm_pin_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/round_edittext"
        android:hint="@string/text_confirm"
        android:padding="10dp" />

    <Button
        android:id="@+id/btn_change_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_celll"
        android:text="@string/text_create_pin"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</LinearLayout>