<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".Activity.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/text_login"
        android:textSize="25sp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edt_mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_mobile_number"
        android:padding="10dp"
        android:background="@drawable/round_edittext"
        app:layout_constraintBottom_toBottomOf="@id/edt_pin"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        android:layout_margin="10dp"
        />


    <EditText
        android:id="@+id/edt_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/round_edittext"
        android:hint="@string/text_pin"
        android:inputType="numberPassword"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent" />



    <Button
        android:id="@+id/btn_login"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/white"
        android:layout_marginRight="10dp"
        android:text="@string/text_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_celll" />

    <Button
        android:id="@+id/btn_submit"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/white"
        android:layout_marginRight="10dp"
        android:visibility="gone"
        android:text="Submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_celll" />


    <LinearLayout
        android:weightSum="2"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:gravity="right"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/text_no_pin"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="15sp"
                android:id="@+id/tv_create_pin"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/text_create_user"/>

        </LinearLayout>



    </LinearLayout>

</LinearLayout>