<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.CreatePinActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/text_generate_user"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_first_name_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/round_edittext"
        android:hint="@string/text_first_name"
        android:padding="10dp" />

    <EditText
        android:id="@+id/edt_last_name_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_edittext"
        android:hint="@string/text_last_name"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_first_name_create" />

    <EditText
        android:id="@+id/edt_date_of_birth_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_edittext"
        android:hint="@string/text_dateofbirth"
        android:padding="10dp"
        android:editable="false"
        android:layout_margin="10dp"/>

    <Spinner
        android:id="@+id/spn_blood_group_create"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:layout_marginBottom="20dp"
        android:entries="@array/blood_group"
        android:background="@drawable/round_edittext"
        android:theme="@style/ThemeSpinner"
        android:visibility="visible" />

    <EditText
        android:id="@+id/edt_enter_pin_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_edittext"
        android:hint="@string/text_pin"
        android:padding="10dp"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/edt_confirm_pin_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/round_edittext"
        android:hint="@string/text_confirm"
        android:padding="10dp" />

    <RadioGroup
        android:id="@+id/rd_gender_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <RadioButton
            android:id="@+id/rd_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="male"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="normal" />

        <RadioButton
            android:id="@+id/rd_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="female"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="normal" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_create_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="108dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_celll"
        android:text="@string/text_generate_user"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/edt_enter_pin"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/edt_enter_pin"
        app:layout_constraintTop_toBottomOf="@+id/edt_enter_pin" />

</LinearLayout>