<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.CategoryFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/ll_filters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_first_name_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:hint="@string/text_first_name"
            android:padding="10dp"
            android:background="@drawable/round_edittext"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/edt_created_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_created_date"
                    android:editable="false"
                    android:textSize="15sp"
                    android:background="@drawable/round_edittext"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/edt_date_of_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Date Of Birth"
                    android:textSize="15sp"
                    android:editable="false"
                    android:background="@drawable/round_edittext"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_filter"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_25sdp"
                    android:text="@string/text_filter"
                    android:textAllCaps="false"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_celll"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_patients"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/_10sdp"
        android:layout_below="@id/ll_filters"
        android:layout_height="match_parent"/>


    <ImageView
        android:id="@+id/iv_add_new_patient"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:src="@drawable/add"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_30sdp"/>


</RelativeLayout>